add: tests, javadoc